added merge sort algorithm to the slicing chapter

--- a/class 4 - slicing/topics.ipynb
+++ b/class 4 - slicing/topics.ipynb
@@ -102,11 +102,148 @@
     "# (remember that :4 means up to the 5th element excluding the fifth, i.e. the first 4 elements of the string.)\n",
     "# doing it this way can sometimes be easier than counting where the word is."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Merge Sort\n",
+    "\n",
+    "We are going to introduce an algorithm used in sorting list (organizing its members in a given order). The algorithm divides the list in sub lists, and sorts them, then compares the different elements to remerge the lists into a single list.\n",
+    "\n",
+    "This will use the slicing we learned to get the sublists.\n",
+    "\n",
+    "Let's go into more details of how the algorithm works:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. A list of 1 element is considered sorted.\n",
+    "2. if a list has N elements we will then divide the list in half, and sort these using recursion on both of the half lists. Merging the two lists using a merge algorithm.\n",
+    "3. To merge the two lists which are SORTED, we will use the following (we are merging l1 and l2), and we will name the function merge():\n",
+    "    - if l1 is empty -> l2 is the merged list and we thus return l2.\n",
+    "    - if l2 is empty -> l1 is the merged list and we thus return l1.\n",
+    "    - if the first element of l1 is smaller or equal than the first element of l2 then the merged list must be:\n",
+    "        l1[0] + merge(l1[1:], l2) where the + sign means joining the two lists in a single one (i.e. is [l1[0], the elements of the merge on the right hand side of +]).\n",
+    "    - if this is not the case then the merged list must be:\n",
+    "        l2[0] + merge(l1, l2[1:]) (same meaning for '+')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## tips:\n",
+    "\n",
+    "# what does l1[1:] give you if l1 has only one element? Try it!\n",
+    "\n",
+    "# what does l1 + l2 do in Python? if l1 and l2 are two lists? Try it!!\n",
+    "\n",
+    "# what does l[:n] and l[n:] give you if n is an integer between 0 and len(l)? Try it with multiple n's and figure it out.\n",
+    "\n",
+    "# we will use a recursive algorithm because it's easier to understand the code than an iterative version.\n",
+    "\n",
+    "# does the order of function in python matter? If I call f1, a function, from f2, another function, does it work if \n",
+    "# f1 is written after f2? Try it with a simple function of your choosing.\n",
+    "\n",
+    "def f1(x):\n",
+    "    pass\n",
+    "\n",
+    "def f2(x):\n",
+    "    return f1(x) # does the order above matter? What if I define f2 before f1?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def merge(l1, l2):\n",
+    "    \"\"\"\n",
+    "    This function will merge two sorted list together using the above recursive method.\n",
+    "    Try to implement it yourself! (replace the pass with an actual function which returns the merged list and takes into\n",
+    "    the limit cases, i.e. when either l1 or l2 is empty).\n",
+    "    \"\"\"\n",
+    "    pass\n",
+    "def merge_sort(l):\n",
+    "    if(len(l) == 1):\n",
+    "        return l\n",
+    "    n_half = # ??? what to put here to get the half of the orginal list? \n",
+    "    # Remember that using a//b will divide and give you the resulting quotient of the euclidean division of a by b, \n",
+    "    # i.e. a = b*q + r with q being the quotient and r the remainder (both integers).\n",
+    "    # And len(l) will give you the number of elements in the list l.\n",
+    "    \n",
+    "    l1 = l[:n_half] # slice the array from 0th to n_half_th - 1 element.\n",
+    "    l2 = l[n_half:] # slice the array from the n_half elfement to the end.\n",
+    "    return merge(merge_sort(l1), merge_sort(l2))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ## Solution! Do not look unless absolutely stuck. Try to work on it first.\n",
+    "def merge(l1, l2):\n",
+    "    \"\"\"\n",
+    "    This function will merge two sorted list together using the above recursive method.\n",
+    "    Try to implement it yourself! (replace the pass with an actual function which returns the merged list and takes into\n",
+    "    the limit cases, i.e. when either l1 or l2 is empty).\n",
+    "    \"\"\"\n",
+    "    if  len(l1) ==  0:\n",
+    "        return l2\n",
+    "    if len(l2) == 0:\n",
+    "        return l1\n",
+    "    if l1[0] <= l2[0]:\n",
+    "        return [l1[0], ] + merge(l1[1:], l2)\n",
+    "    else:\n",
+    "        return [l2[0], ] + merge(l1, l2[1:])\n",
+    "\n",
+    "def merge_sort(l):\n",
+    "    if(len(l) == 1):\n",
+    "        return l\n",
+    "    n_half = len(l)//2 # ??? what to put here to get the half of the orginal list? \n",
+    "    # Remember that using a//b will divide and give you the resulting quotient of the euclidean division of a by b, \n",
+    "    # i.e. a = b*q + r with q being the quotient and r the remainder (both integers).\n",
+    "    # And len(l) will give you the number of elements in the list l.\n",
+    "    \n",
+    "    l1 = l[:n_half] # slice the array from 0th to n_half_th - 1 element.\n",
+    "    l2 = l[n_half:] # slice the array from the n_half elfement to the end.\n",
+    "    return merge(merge_sort(l1), merge_sort(l2)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 4, 4, 6, 7, 9]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = [1,6,2,7,9,0,4,4]\n",
+    "merge_sort(l)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -122,7 +259,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "cf6e3b3694dfcf56de8c82cd7c6d10831c337fb802e3ac6d608eeefba37edc98"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
