added explanation on the slicing until and from an nth element.

--- a/class 4 - slicing/topics.ipynb
+++ b/class 4 - slicing/topics.ipynb
@@ -104,6 +104,68 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# you can also slice from the begining of the list until a given n_th element - 1 by using:\n",
+    "# l[:n] (the n_th element is not reached - counting from 0!)\n",
+    "example = [1, 2, 4, 10, 11]\n",
+    "print(example[:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 10, 11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# You can slice from a given nth element (this element is included)\n",
+    "# (counting from 0) until the end of the list using:\n",
+    "# l[n:] see:\n",
+    "example = [1, 2, 4, 10, 11]\n",
+    "print(example[2:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My\n",
+      " name is Weronika\n"
+     ]
+    }
+   ],
+   "source": [
+    "# same methods apply to strings:\n",
+    "text = \"My name is Weronika\"\n",
+    "print(text[:2])\n",
+    "print(text[2:]) # notice the space at the begining of the string."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
