added note on in place changes of list through functions

--- a/class 4 - slicing/topics.ipynb
+++ b/class 4 - slicing/topics.ipynb
@@ -704,7 +704,11 @@
     "# and create a function:\n",
     "\n",
     "def exchange(i, j, my_list): # this function will exchange the element in i with the element in j in my_list.\n",
-    "    pass"
+    "    pass\n",
+    "\n",
+    "# remember that when you pass a list to a function you are modifying the ORIGINAL list not a copy. \n",
+    "# So any changes to the list inside the function will be available outside of the function.\n",
+    "# we say that the list is changed in place."
    ]
   },
   {
